<resources>
    <string name="app_name">mobileLab_7</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="welcome">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="reset">Reset</string>
    <string name="invalid_details">Invalid Details</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="email_id">Email Id</string>
    <string name="welcome_to_login_screen">Welcome to Login Screen</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="email_address">Email Address</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="textview">TextView</string>
    <string name="register">REGISTER</string>
    <string name="todo">TODO</string>
    <string name="listen">Tap button to listen</string>
    <string name="mic">mic</string>
    <string name="tap_mic_to_speak">Tap mic to speak</string>
    <string name="tap">tap</string>
    <string name="tap_mic">Tap mic to speak</string>
    <string name="question1">Tell us about yourself</string>
    <string name="tell_about_yourself">Tell About Yourself</string>
    <string name="save">Save</string>
</resources>
