<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpeechToText">


    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="73dp"
        android:text="@string/question1"
        android:textSize="22sp"
        android:textStyle="bold|italic" />
    <ImageButton
        android:id="@+id/btnSpeak"
        android:layout_width="122dp"
        android:layout_height="125dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="123dp"
        android:background="#f5f5f5"
        android:contentDescription="@string/mic"
        android:onClick="speak"
        android:padding="16dp"
        android:scaleType="fitCenter"
        android:src="@drawable/mic" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/tap_mic"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/voiceInput"
        android:layout_width="273dp"
        android:layout_height="71dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="84dp"
        android:textSize="19sp"
        android:visibility="invisible" />

</RelativeLayout>
